--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   "author": "Kamal Kashyap",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "argon2": "^0.41.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-fileupload": "^1.5.0",
-    "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
-    "mongoose": "^8.4.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
+    "validator": "^13.12.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
@@ -29,11 +30,13 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-fileupload": "^1.5.0",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
+    "@types/validator": "^13.12.2",
     "nodemon": "^3.1.0",
+    "prisma": "^6.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
