--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
     "validator": "^13.12.0",
     "winston": "^3.13.0"
@@ -33,6 +34,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.12.12",
     "@types/validator": "^13.12.2",
     "nodemon": "^3.1.0",
